--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,16 @@
 # SPDX-License-Identifier: MIT
 
 [workspace]
-members = ["crates/kedge-contracts", "crates/kedge-cli", "crates/kedge-harness", "crates/kedge-test", "crates/kedge-synth", "crates/kedge-spec"]
+members = [
+  "crates/kedge-contracts",
+  "crates/kedge-cli",
+  "crates/kedge-harness",
+  "crates/kedge-test",
+  "crates/kedge-synth",
+  "crates/kedge-spec",
+]
 resolver = "3"
 
 [workspace.package]
 version = "0.1.0"
+license = "MIT"
