chore: renamed kedge-harness to kedge-verify

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@
 members = [
   "crates/kedge-contracts",
   "crates/kedge-cli",
-  "crates/kedge-harness",
+  "crates/kedge-verify",
   "crates/kedge-test",
   "crates/kedge-synth",
   "crates/kedge-spec",
