--- a/crates/kedge-contracts/Cargo.toml
+++ b/crates/kedge-contracts/Cargo.toml
@@ -6,8 +6,14 @@ name = "kedge-contracts"
 edition = "2024"
 version.workspace = true
 
+[lib]
+proc-macro = true
+
 [dependencies]
 flux-rs = { git = "https://github.com/flux-rs/flux.git", optional = true }
+proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
+quote = "1.0.44"
+syn = "2.0.117"
 
 [target.'cfg(kani_ra)'.dependencies]
 kani = { git = "https://github.com/model-checking/kani", optional = true }
