--- a/crates/kedge-contracts/Cargo.toml
+++ b/crates/kedge-contracts/Cargo.toml
@@ -13,7 +13,7 @@ proc-macro = true
 flux-rs = { git = "https://github.com/flux-rs/flux.git", optional = true }
 proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
 quote = "1.0.44"
-syn = "2.0.117"
+syn = { version = "2.0.117", features = ["full"] }
 
 [target.'cfg(kani_ra)'.dependencies]
 kani = { git = "https://github.com/model-checking/kani", optional = true }
