fix: disabled cfg lints for kani in tests

--- a/crates/kedge-contracts-tests/Cargo.toml
+++ b/crates/kedge-contracts-tests/Cargo.toml
@@ -5,4 +5,10 @@ version.workspace = true
 license.workspace = true
 
 [dependencies]
-kedge-contracts = { version = "0.1.0", path = "../kedge-contracts", features = ["flux-rs", "kani"] }
+kedge-contracts = { version = "0.1.0", path = "../kedge-contracts", features = [
+  "flux-rs",
+  "kani",
+] }
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
