fix: removed version in local crate dependency

--- a/crates/kedge-contracts-tests/Cargo.toml
+++ b/crates/kedge-contracts-tests/Cargo.toml
@@ -5,7 +5,7 @@ version.workspace = true
 license.workspace = true
 
 [dependencies]
-kedge-contracts = { version = "0.1.0", path = "../kedge-contracts", features = [
+kedge-contracts = { path = "../kedge-contracts", features = [
   "flux-rs",
   "kani",
 ] }
