--- a/crates/kedge-contracts-tests/Cargo.toml
+++ b/crates/kedge-contracts-tests/Cargo.toml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2026 Oscar Bender-Stone <oscar-bender-stone@protonmail.com>
+# SPDX-License-Identifier: MIT
+
 [package]
 name = "kedge-contracts-tests"
 edition = "2024"
