--- a/crates/kedge-contracts-core/Cargo.toml
+++ b/crates/kedge-contracts-core/Cargo.toml
@@ -9,4 +9,4 @@ license.workspace = true
 
 [dependencies]
 proc-macro2 = "1.0.106"
-syn = "2.0.117"
+syn = { version = "2.0.117", features = ["full"] }
