--- a/crates/kedge-contracts/Cargo.toml
+++ b/crates/kedge-contracts/Cargo.toml
@@ -15,6 +15,7 @@ proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
 quote = "1.0.44"
 syn = { version = "2.0.117", features = ["full"] }
 kedge-contracts-core = { path = "../kedge-contracts-core" }
+proptest = { version = "1.10.0", optional = true, features = ["attr-macro"] }
 
 [target.'cfg(kani_ra)'.dependencies]
 kani = { git = "https://github.com/model-checking/kani", optional = true }
