fix: separated contracts into separate frontend and macros crates

--- a/crates/kedge-contracts/Cargo.toml
+++ b/crates/kedge-contracts/Cargo.toml
@@ -5,17 +5,18 @@
 name = "kedge-contracts"
 edition = "2024"
 version.workspace = true
-
-[lib]
-proc-macro = true
+license.workspace = true
 
 [dependencies]
-flux-rs = { git = "https://github.com/flux-rs/flux.git", optional = true }
-proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
-quote = "1.0.44"
-syn = { version = "2.0.117", features = ["full"] }
-kedge-contracts-core = { path = "../kedge-contracts-core" }
-proptest = { version = "1.10.0", optional = true, features = ["attr-macro"] }
+kedge-contracts-macros = { path = "../kedge-contracts-macros", features = [
+  "flux-rs",
+  "kani",
+  "proptest",
+] }
+proptest = { version = "1.10.0", optional = true }
 
-[target.'cfg(kani_ra)'.dependencies]
-kani = { git = "https://github.com/model-checking/kani", optional = true }
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
+
+[features]
+proptest = ["dep:proptest", "kedge-contracts-macros/proptest"]
