--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,11 @@
 [workspace]
 members = [
   "crates/kedge-contracts-core",
+  "crates/kedge-contracts-macros",
   "crates/kedge-contracts",
-  "crates/kedge-contracts-tests",
   "crates/kedge-cli",
   "crates/kedge-synth",
-  "crates/kedge-spec",
+  "crates/kedge-spec", "crates/kedge-contracts-tests",
 ]
 resolver = "3"
 
