--- a/crates/kedge-contracts-tests/Cargo.toml
+++ b/crates/kedge-contracts-tests/Cargo.toml
@@ -8,12 +8,7 @@ version.workspace = true
 license.workspace = true
 
 [dependencies]
-kedge-contracts = { path = "../kedge-contracts", features = [
-  "flux-rs",
-  "kani",
-  "proptest",
-] }
-proptest = "1.10.0"
+kedge-contracts = { path = "../kedge-contracts", features = ["proptest"] }
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
