--- a/crates/kedge-contracts-core/Cargo.toml
+++ b/crates/kedge-contracts-core/Cargo.toml
@@ -8,5 +8,5 @@ version.workspace = true
 license.workspace = true
 
 [dependencies]
-proc-macro2 = "1.0.106"
-syn = { version = "2.0.117", features = ["full"] }
+proc-macro2 = { workspace = true }
+syn = { workspace = true }
