--- a/crates/kedge-contracts-macros/Cargo.toml
+++ b/crates/kedge-contracts-macros/Cargo.toml
@@ -10,11 +10,11 @@ version.workspace = true
 proc-macro = true
 
 [dependencies]
-flux-rs = { git = "https://github.com/flux-rs/flux.git", optional = true }
-proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
-quote = "1.0.44"
-syn = { version = "2.0.117", features = ["full"] }
+proc-macro2 = { workspace = true }
+quote = { workspace = true }
+syn = { workspace = true }
 kedge-contracts-core = { path = "../kedge-contracts-core" }
+flux-rs = { git = "https://github.com/flux-rs/flux.git", optional = true }
 proptest = { version = "1.10.0", optional = true, features = ["attr-macro"] }
 
 [target.'cfg(kani_ra)'.dependencies]
