--- a/crates/kedge-contracts/Cargo.toml
+++ b/crates/kedge-contracts/Cargo.toml
@@ -8,11 +8,7 @@ version.workspace = true
 license.workspace = true
 
 [dependencies]
-kedge-contracts-macros = { path = "../kedge-contracts-macros", features = [
-  "flux-rs",
-  "kani",
-  "proptest",
-] }
+kedge-contracts-macros = { path = "../kedge-contracts-macros" }
 proptest = { version = "1.10.0", optional = true }
 
 [lints.rust]
@@ -20,3 +16,8 @@ unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
 
 [features]
 proptest = ["dep:proptest", "kedge-contracts-macros/proptest"]
+tests = ["proptest"]
+kani = ["kedge-contracts-macros/kani"]
+flux-rs = ["kedge-contracts-macros/flux-rs"]
+verify = ["kani", "flux-rs"]
+all = ["tests", "verify"]
