--- a/crates/kedge-contracts/Cargo.toml
+++ b/crates/kedge-contracts/Cargo.toml
@@ -10,6 +10,7 @@ license.workspace = true
 [dependencies]
 kedge-contracts-macros = { path = "../kedge-contracts-macros" }
 proptest = { version = "1.10.0", optional = true }
+flux-rs = { git = "https://github.com/flux-rs/flux.git", optional = true }
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
@@ -18,6 +19,6 @@ unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
 proptest = ["dep:proptest", "kedge-contracts-macros/proptest"]
 tests = ["proptest"]
 kani = ["kedge-contracts-macros/kani"]
-flux-rs = ["kedge-contracts-macros/flux-rs"]
+flux-rs = ["dep:flux-rs", "kedge-contracts-macros/flux-rs"]
 verify = ["kani", "flux-rs"]
 all = ["tests", "verify"]
