feat: added old for specs

--- a/crates/kedge-contracts-core/Cargo.toml
+++ b/crates/kedge-contracts-core/Cargo.toml
@@ -10,3 +10,4 @@ license.workspace = true
 [dependencies]
 proc-macro2 = { workspace = true }
 syn = { workspace = true }
+quote = { workspace = true }
